[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game/Assets/Images/Environment/tilesmap.png" type="Texture" id=1]
[ext_resource path="res://Game/Assets/Audio/ogg/effects/teleport.ogg" type="AudioStream" id=2]
[ext_resource path="res://Game/Effects/ExitFullFilled.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Blocks/Teleporter/Teleporter.gd" type="Script" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.116114, 0.274882, 0.495261, 0.706161, 0.834123, 1 )
colors = PoolColorArray( 0, 0.633333, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0.88, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0.55, 0.985, 1, 0.258824 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
max_value = 4.0
_data = [ Vector2( 0, 0 ), 0.0, 52.928, 0, 0, Vector2( 0.0674157, 1.24545 ), -12.3743, -12.3743, 0, 0, Vector2( 0.155056, 0.154545 ), 0.0, 0.0, 0, 0, Vector2( 0.25618, 1.35455 ), -9.18428, -9.18428, 0, 0, Vector2( 0.355056, 0.3 ), -6.13793, -6.13793, 0, 0, Vector2( 0.47191, 0.736364 ), -3.34796, -3.34796, 0, 0, Vector2( 0.993258, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.1
emission_shape = 2
emission_box_extents = Vector3( 14.5, 14.5, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_random = 0.1
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=6]
resource_name = "activated"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BgGround:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WholeBlack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WholeBlack:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/BordersActivated:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/BordersActivated:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WholeBlack/HoverBlack:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.505882 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BgGround:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.741176, 0.741176, 0.741176, 0.466667 ), Color( 0.45098, 0.45098, 0.45098, 0.764706 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 0.458824, 0.458824, 0.458824, 0.709804 ), Color( 0.729412, 0.729412, 0.729412, 0.454902 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WholeBlack:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WholeBlack:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/BordersActivated:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/BordersActivated:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[node name="Teleporter" type="Node2D"]
script = ExtResource( 4 )

[node name="BgBlack" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 7.15256e-07, 7.15256e-07 )
texture = ExtResource( 1 )
vframes = 10
hframes = 10
frame = 13
region_rect = Rect2( 160, 96, 32, 32 )

[node name="BgGround" type="Sprite" parent="."]
modulate = Color( 0.741176, 0.741176, 0.741176, 0.466667 )
position = Vector2( 7.15256e-07, 7.15256e-07 )
texture = ExtResource( 1 )
vframes = 10
hframes = 10
frame = 13
region_rect = Rect2( 160, 96, 32, 32 )

[node name="WholeBlack" parent="." instance=ExtResource( 3 )]
emitting = true
lifetime = 11.91
one_shot = false
process_material = SubResource( 5 )

[node name="HoverBlack" type="Sprite" parent="WholeBlack"]
modulate = Color( 0, 0, 0, 0.505882 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
vframes = 10
hframes = 10
frame = 13
region_rect = Rect2( 160, 96, 32, 32 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 77
follow_viewport_enable = true

[node name="BordersActivated" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false
lifetime = 0.4
one_shot = false
process_material = SubResource( 5 )

[node name="HoverBlack2" type="Sprite" parent="CanvasLayer/BordersActivated"]
modulate = Color( 0, 0, 0, 0.34902 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
vframes = 10
hframes = 10
frame = 13
region_rect = Rect2( 160, 96, 32, 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/activated = SubResource( 6 )
anims/idle = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -6.0
mix_target = 1
bus = "Effects"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
